<resources>
    <string name="app_name">Worter</string>
    <string name="next">next</string>
    <string name="practice">practice</string>
    <string name="add">add word</string>
    <string name="word">Word:</string>
    <string name="translation">Translation:</string>
    <string name="add_word">Add word</string>
    <string name="hint2">Dog</string>
    <string name="hint1">Der Hund</string>
    <string name="statistics">Statistics</string>
    <string name="about_app">About App</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="foreign_to_own">Foreign to own</string>
    <string name="own_to_foreign">Own to foreign</string>
    <string name="update">Update</string>
    <string name="check">check</string>
    <string name="no_words_message">You don\'t have words</string>
</resources>